kubernetes-security/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels:
    app: homework-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homework-web
  template:
    metadata:
      labels:
        app: homework-web
    spec:
      serviceAccountName: monitoring
      nodeSelector:
        homework: "true"
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: homework-pvc
        - name: nginx-config
          configMap:
            name: nginx-homework-config
        - name: homework-config-volume
          configMap:
            name: homework-config
      containers:
        - name: nginx
          image: nginx:stable-alpine
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "400m"
          readinessProbe:
            httpGet:
              path: /index.html
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: shared-volume
              mountPath: /homework
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: homework-config-volume
              mountPath: /homework/conf
              readOnly: True
          lifecycle:
            preStop:
              exec:
                command:
                  - sh
                  - -c
                  - rm -f /homework/index.html
          ports:
            - containerPort: 80

        - name: metrics-fetcher
          image: curlimages/curl
          command:
            - sh
            - -c
            - |
              while true; do
                # Запрашиваем метрики у Kubelet (используем токен ServiceAccount)
                TOKEN=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
                curl -s -k -H "Authorization: Bearer $TOKEN" "https://${NODE_IP}:10250/metrics" > /homework/metrics.html
                sleep 30  # Обновляем каждые 30 секунд
              done
          volumeMounts:
            - name: shared-volume
              mountPath: /homework
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
